# governance-graph-compiler

./: DISCLAIMER.md  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  TASKS.md  pyproject.toml
memory/: constitution.md
policies/: example.md
src/ggc/: cli.py  compiler.py
tests/: test_ggc_cli.py
tests/fixtures/: policy.md
