[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-graph-compiler"
version = "0.1.0"
description = "Governance Graph Compiler CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ggc = "ggc.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
